# wit-adapter

./: .gitignore  README.md  epdp-wasm.wasm
cerbos-adapter/: justfile  wasi_snapshot_preview1.wasm  wasmcloud.toml
cerbos-adapter/src/: from_wit.rs  lib.rs
cerbos-adapter/wit/: deps.toml  world.wit
cerbos-serde/: Cargo.toml
cerbos-serde/src/: lib.rs
epdp-wasi-adapter/: .gitignore  Cargo.toml  justfile
epdp-wasi-adapter/src/: to_wit.rs
epdp-wasi-adapter/wit/: deps.toml  world.wit
epdp-wasm/: justfile
http-proxy/: .gitignore  Cargo.toml  justfile  wadm.yaml  wasmcloud.toml
http-proxy/src/: lib.rs
http-proxy/wit/: deps.toml  world.wit
workspace/: policy-wasi.wasm
workspace/wit/: host.wit
