[package]
name = "epdp-wasi-adapter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
wit-bindgen = { version = "0.24.0", features = ["default"] }
cerbos_serde = { git = "https://github.com/cerbos/epdp-types-rs.git", package = "epdp-types-rs" }
